# rtthread-nano

rt-thread/bsp/picorv32_blink/: CMakeLists.txt  board.c  porting-guide.txt  rtconfig.h  toolchain-file.txt
rt-thread/bsp/picorv32_blink/drivers/: board.c  board.h
rt-thread/bsp/picorv32_blink/drivers/linker_scripts/: link.lds
rt-thread/bsp/picorv32_blink/libraries/: start.S
rt-thread/bsp/picorv32_blink/src/: main.c  sections.ld
